Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 16.0.0, Qt Creator 16.0.2
-
Ubuntu 24.04 LTS
-
b3a97d341 (master)
Description
- Open a project you haven't built yet.
I used CMake- and qmake-based Qt Widgets Application projects from Creator's wizard. - Open its Run Settings.
The executable's path is displayed in red because it does not exist yet. - Build the project.
Expected: The path changes to neutral colors.
Actual: The path stays red and the tooltip reads "The path (...) does not exist" although the binary was successfully built.
Fun fact: The path turns to neutral colors when a different window gets focus and turns red again when Creator gets focus.
Attachments
For Gerrit Dashboard: QTCREATORBUG-32781 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
640509,2 | ProjectExplorer: Update ExecutableAspect's visual representation | master | qt-creator/qt-creator | Status: MERGED | +2 | -1 |