ProjectExplorer: Update ExecutableAspect's visual representation

... when building finishes. Chances are that an executable was created
during the build.

Fixes: QTCREATORBUG-32781
Change-Id: I63bf42708ef96c1be40376ea565a94f1fe81f5ae
Reviewed-by: hjk <hjk@qt.io>